# pokemon

./: Cargo.toml  README.md  docs.md
.github/workflows/: ci.yml
data/: pokemon.csv
src/: lib.rs
