[package]
name = "pokemon"
version = "2.0.0"
edition = "2021"
authors = ["Emma Ramirez <ramirez.emma.g@gmail.com>"]
# respository = "https://github.com/emzinnia/pokemon.git"
homepage = "https://github.com/emzinnia/pokemon.git"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/emzinnia/pokemon"
description = "Get Pokémon names"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
rand = "0.8"
 